changing the add-on name once again

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "firefox-shortcuts",
+    "name": "customizable-shortcuts",
     "license": "MPL 1.1/GPL 2.0/LGPL 2.1",
     "author": "Tim Taubert <tim@timtaubert.de>",
     "url": "http://timtaubert.de/firefox-shortcuts",
     "version": "0.2",
-    "fullName": "Firefox Shortcuts",
-    "id": "firefox-shortcuts@timtaubert.de",
-    "description": "Allows to customize Firefox shortcuts"
+    "fullName": "Customizable Shortcuts",
+    "id": "customizable-shortcuts@timtaubert.de",
+    "description": "Allows to customize shortcuts"
 }
