--- a/package.json
+++ b/package.json
@@ -2,9 +2,34 @@
     "name": "customizable-shortcuts",
     "license": "MPL 1.1/GPL 2.0/LGPL 2.1",
     "author": "Tim Taubert <tim@timtaubert.de>",
-    "url": "https://github.com/ttaubert/customizable-shortcuts",
-    "version": "0.5.11",
+    "homepage": "https://github.com/ttaubert/customizable-shortcuts",
+    "version": "1.0",
     "fullName": "Customizable Shortcuts",
     "id": "customizable-shortcuts@timtaubert.de",
-    "description": "Allows to customize shortcuts"
+    "description": "Enables customization and overriding of several default shortcuts.",
+    "contributors": ["Gregorio Litenstein <mazinger@vtr.net>"],
+    "icon": "data/icon48.png",
+    "icon64": "data/icon64.png",
+    "permissions": {
+        "private-browsing": true
+    },
+    "preferences": [{
+        "name": "overridePluginFocus",
+        "type": "bool",
+        "title": "Steal focus from plug-ins?",
+        "description": "When this is on, plugins such as flash will be told to release mouse focus immediately after they have been clicked on.",
+        "value": true
+    }, {
+        "name": "pluginCssSelectors",
+        "type": "string",
+        "title": "List of CSS Selectors by which to find plugins",
+        "description": "This list will define which plugins the extension will try to override as described above.",
+        "value": "embed,object"
+    }, {
+        "name": "domainUrlPattern",
+        "type": "string",
+        "title": "Address Pattern",
+        "description": "This pattern will be used to define which sites we will try to prevent focus capturing on. You can use * as wildcards or provide a (case-sensitive) Regular Expression.",
+        "value": "*"
+    }]
 }
