--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "customizable-shortcuts",
-    "license": "MPL 1.1/GPL 2.0/LGPL 2.1",
+    "license": "MPL 2.0",
     "author": "Tim Taubert <tim@timtaubert.de>",
     "url": "https://github.com/ttaubert/customizable-shortcuts",
     "version": "0.5.11",
