--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
   "version": "0.5.11",
   "fullName": "Customizable Shortcuts",
   "id": "customizable-shortcuts@timtaubert.de",
-  "description": "Allows to customize shortcuts"
+  "description": "Allows to customize shortcuts",
+  "permissions": {"private-browsing": true}
 }
