--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "license": "MPL 2.0",
   "author": "Tim Taubert <tim@timtaubert.de>",
   "url": "https://github.com/ttaubert/customizable-shortcuts",
-  "version": "0.6.2",
+  "version": "0.9.0",
   "fullName": "Customizable Shortcuts",
   "id": "customizable-shortcuts@timtaubert.de",
-  "description": "Allows to customize shortcuts",
+  "description": "Allows to easily change most of the existing shortcuts in Firefox",
   "permissions": {"private-browsing": true}
 }
