--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "license": "MPL 2.0",
   "author": "Tim Taubert <tim@timtaubert.de>",
   "url": "https://github.com/ttaubert/customizable-shortcuts",
-  "version": "0.9.6",
-  "fullName": "Customizable Shortcuts",
+  "version": "0.9.7",
+  "title": "Customizable Shortcuts",
   "id": "customizable-shortcuts@timtaubert.de",
   "description": "Allows to easily change most of the existing shortcuts in Firefox",
   "permissions": {"private-browsing": true, "multiprocess": true},
